# BFIO

./: CMakeLists.txt
include/BFIO/: file.h  io.h  types.h
include/examples/gamesave/: gamedata.h  gamesave.h
src/: main.c
src/BFIO/: io.c
src/examples/gamesave/: gamedata.c  gamesave.c
